socket-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nanumsa-socket-server
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nanumsa-socket-server
    template:
        metadata:
            labels:
                app: nanumsa-socket-server
        spec:
            hostNetwork: true
            containers:
                - name: nanumsa-socket-server
                  image: smilemeeso/nanumsa-socket-server:latest
                  ports:
                      - containerPort: 3030
