socket-server/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nanumsa-socket-server
spec:
    selector:
        app: nanumsa-socket-server
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
