socket-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nanumsa-socket-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    cert-manager.io/acme-challenge-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: nginx
    
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # ws config
    nginx.ingress.kubernetes.io/websocket-services: nanumsa-socket-server
    nginx.org/websocket-services: nanumsa-socket-server
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    # ws config end
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_pass_header Content-Type;
      proxy_set_header Host $host;

      location /socket.io/(.*) {
        nginx.ingress.kubernetes.io/proxy-pass: https://www.nanumsa.com/socket.io/
      }
spec:
  ingressClassName: nginx
  tls: 
  - hosts: 
    - www.nanumsa.com
    secretName: tls-secret-socket-server
  rules:
  - host: www.nanumsa.com
    http:
      paths:
        - path: /socket/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: nanumsa-socket-server-service
              port:
                number: 3000
        - path: /socket.io/
          pathType: Prefix
          backend:
            service:
              name: nanumsa-socket-server-service
              port:
                number: 3000
